apps/miniflux/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: miniflux
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: miniflux/miniflux:2.0.49
          name: app
